--- a/tickevents-placeholder/src/app/home/home.component.html
+++ b/tickevents-placeholder/src/app/home/home.component.html
@@ -1,9 +1,13 @@
-<!-- Header  -->
-<app-new-home-header logoColor="white"></app-new-home-header>
-<!-- End header -->
-
 <div class="container-fluid p-0">
-	
+
+	<div class="container p-0">
+		<div class="row no-gutters">
+			<div class="col">
+				<app-new-home-header logoColor="white"></app-new-home-header>
+			</div>
+		</div>
+	</div>
+
 	<!-- Title section -->
 	<div class="row no-gutters p-relative">
 		<div class="col">
@@ -167,7 +171,8 @@
 									</div>
 								</div>
 								<div class="col-12 col-xl-6 mt-0 mt-md-5 mt-xl-0 ">
-									<div class="row no-gutters h-100 align-content-center justify-content-center justify-content-md-end justify-content-xl-center">
+									<div
+										class="row no-gutters h-100 align-content-center justify-content-center justify-content-md-end justify-content-xl-center">
 										<div class="col-auto">
 											<img src="../../assets/new-start-jumping-people.svg" class="jumping-people">
 										</div>
@@ -215,7 +220,8 @@
 
 					<div class="col-12 col-xl-6 h-100">
 						<img src="../../assets/new-start-jumping-man.svg" class="d-inline d-xl-none jumping-man">
-						<img src="../../assets/new-start-jumping-man-desktop.svg" class="d-none d-xl-inline h-100 jumping-man">
+						<img src="../../assets/new-start-jumping-man-desktop.svg"
+							class="d-none d-xl-inline h-100 jumping-man">
 					</div>
 					<div class="col-12 col-xl-6 px-3 mt-5 align-self-center jumping-man-text">
 						<h1 class="section-header">Minder servicekosten</h1>
@@ -239,11 +245,12 @@
 			<div class="container">
 				<div class="row no-gutters p-relative  justify-content-center">
 					<div class="col-12 p-absolute">
-						<img src="../../assets/new-start-cards-background-desktop.svg" class="cards-background d-none d-xl-inline">
+						<img src="../../assets/new-start-cards-background-desktop.svg"
+							class="cards-background d-none d-xl-inline">
 					</div>
 
 					<div class="col-6 col-md-4 card-wrapper order-1">
-						
+
 						<div class="card box-shadow p-relative">
 							<img src="../../assets/new-start-card-background.svg" class="p-absolute card-background">
 
@@ -254,7 +261,7 @@
 									</h1>
 								</div>
 							</div>
-							
+
 							<div class="row">
 								<div class="col-12">
 									<h1 class="card-header ft-alata text-center">Goedkoop</h1>
@@ -360,7 +367,7 @@
 						<h1 class="success-name text-center text-md-right ft-alata m-0">Robin La Rondelle</h1>
 						<p class="success-subtitle text-center text-md-right purple m-0">Oprichter van Tickevents</p>
 					</div>
-				</div> 
+				</div>
 			</div>
 		</div>
 	</div>
@@ -373,7 +380,8 @@
 				<div class="row no-gutters">
 
 					<div class="col-12 col-md-6 order-md-2 align-self-md-center">
-						<p class="section-text font-italic">"Tickevents heeft mij een hoop zorgen en kosten bespaard! De oprichter kwam
+						<p class="section-text font-italic">"Tickevents heeft mij een hoop zorgen en kosten bespaard! De
+							oprichter kwam
 							persoonlijk
 							langs om een bakje koffie te drinken en de plannen van m'n workshop bespreken, om te kijken
 							hoe we goed
@@ -403,7 +411,8 @@
 								je evenement aan</span></h2>
 					</div>
 					<div class="col-12 col-md-6 col-xl-4 ml-xl-auto mr-xl-0 order-xl-3 mt-3 mt-xl-0">
-						<button routerLink="/getting-started" class="button cta-button w-100 text-center ft-alata">Aan de
+						<button routerLink="/getting-started" class="button cta-button w-100 text-center ft-alata">Aan
+							de
 							slag</button>
 					</div>
 					<div class="col-12 col-xl-4 order-xl-1 mt-5">
@@ -419,4 +428,4 @@
 	<app-footer></app-footer>
 	<!-- End footer -->
 
-</div> 
+</div>
