--- a/tickevents-placeholder/src/app/getting-started/getting-started.component.html
+++ b/tickevents-placeholder/src/app/getting-started/getting-started.component.html
@@ -7,10 +7,10 @@
 
                 <!-- Header -->
                 <div class="row no-gutters">
-                    <div class="col d-none d-lg-flex">
+                    <div class="col d-none d-lg-block">
                         <app-new-home-header logoColor="black"></app-new-home-header>
                     </div>
-                    <div class="col d-lg-none d-flex">
+                    <div class="col d-lg-none d-block">
                         <app-new-home-header logoColor="white"></app-new-home-header>
                     </div>
                 </div>
