--- a/tickevents-placeholder/src/app/home/home.component.css
+++ b/tickevents-placeholder/src/app/home/home.component.css
@@ -48,6 +48,10 @@
     padding-top: 56px !important;
 }
 
+.title-section {
+    margin-top: 50px;
+}
+
 .title {
     font-size: 2.5em;
     margin-top: 3.5em;
