--- a/tickevents-placeholder/src/app/getting-started/getting-started.component.css
+++ b/tickevents-placeholder/src/app/getting-started/getting-started.component.css
@@ -41,7 +41,7 @@ label {
 input {
     height: 60px;
     border-radius: 30px;
-    font-size: 24px;
+    font-size: 22px;
     -webkit-box-shadow: 12px 12px 16px 0px rgba(0, 0, 0, 0.16);
     -moz-box-shadow: 12px 12px 16px 0px rgba(0, 0, 0, 0.16);
     box-shadow: 12px 12px 16px 0px rgba(0, 0, 0, 0.16);
@@ -156,7 +156,7 @@ input {
         font-size: 50px;
     }
 
-    .subtitle {
+    .subtitle, input {
         font-size: 24px;
     }
 }
