Added simple header in create-event

--- a/tickevents-placeholder/src/app/create-event/create-event.component.html
+++ b/tickevents-placeholder/src/app/create-event/create-event.component.html
@@ -1,5 +1,8 @@
 <div class="container-fluid p-0">
-	<div class="row no-gutters ">
+
+	<app-create-event-header></app-create-event-header>
+	
+	<div class="row no-gutters">
 
 		<!-- Left panel -->
 		<div class="col-5 left-panel mnh-100vh">
@@ -16,7 +19,7 @@
 							</div>
 						</div>
 						<div class="col align-self-center">
-							<h1 class="m-0">evemement aanmaken</h1>
+							<h1 class="m-0">evenement aanmaken</h1>
 						</div>
 					</div>
 
