Added item toggles for color, added base components

--- a/tickevents-placeholder/src/app/create-event/create-event.component.css
+++ b/tickevents-placeholder/src/app/create-event/create-event.component.css
@@ -7,6 +7,14 @@
     min-width: 500px;
 }
 
+.left-panel-content {
+    margin-top: 150px
+}
+
+.mb-5 {
+    margin-bottom: 80px !important;
+}
+
 .title {
     font-size: 54px;
 }
