--- a/tickevents-placeholder/src/app/create-event/event-details/event-details.component.html
+++ b/tickevents-placeholder/src/app/create-event/event-details/event-details.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row no-gutters">
     <div class="col-12">
         <h1 class="text-center title ft-alata">Gegevens van je evenement</h1>
     </div>
