--- a/tickevents-placeholder/src/app/create-event/event-details/event-location/event-location.component.html
+++ b/tickevents-placeholder/src/app/create-event/event-details/event-location/event-location.component.html
@@ -1,1 +1,13 @@
-<p>event-location works!</p>
+<div class="row no-gutters h-100">
+    <div class="col-2 align-self-center text-center">
+        <app-prev-button (click)="clickPrevious()"></app-prev-button>
+    </div>
+    
+    <div class="col-8">
+        <h1 class="text-center subtitle">Geef je evenement een pakkende naam</h1>
+    </div>
+    
+    <div class="col-2 align-self-center text-center">
+        <app-next-button (click)="clickNext()"></app-next-button>
+    </div>
+</div>
