--- a/tickevents-placeholder/src/app/create-event/event-details/event-datetime/event-datetime.component.html
+++ b/tickevents-placeholder/src/app/create-event/event-details/event-datetime/event-datetime.component.html
@@ -1,1 +1,13 @@
-<p>event-datetime works!</p>
+<div class="row no-gutters h-100">
+    <div class="col-2 align-self-center text-center">
+        <app-prev-button (click)="clickPrevious()"></app-prev-button>
+    </div>
+
+    <div class="col-8">
+        <h1 class="text-center subtitle">Op welke dag start je evenement? <br>Je kunt meerdere dagen selecteren</h1>
+    </div>
+
+    <div class="col-2 align-self-center text-center">
+        <app-next-button (click)="clickNext()"></app-next-button>
+    </div>
+</div>
