--- a/tickevents-placeholder/src/custom.css
+++ b/tickevents-placeholder/src/custom.css
@@ -19,8 +19,7 @@ Place your color classes here if you need to use them more than once.
 */
 
 .w { color: white !important; }
-.b { color: black !important; }
-.black { color: black !important; }
+.b, .black { color: black !important; }
 .r { color: red !important; }
 .gray { color: gray !important; }
 .blue { color: #092134 !important;}
