--- a/tickevents-placeholder/src/app/create-event/create-event.component.html
+++ b/tickevents-placeholder/src/app/create-event/create-event.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid p-0">
 
 	<app-create-event-header></app-create-event-header>
-	
+
 	<div class="row no-gutters">
 
 		<!-- Left panel -->
@@ -9,40 +9,61 @@
 
 			<div class="row h-100">
 				<div class="col-12 px-5 left-panel-content">
+					<div class="d-flex flex-column h-100">
 
-					<h1 class="w ft-alata text-center title mb-5">Maak een evenement aan</h1>
-
-					<!-- The first item in the list is always active -->
-					<div class="row list-item mb-5 active"> 
-						<div class="col-auto">
-							<div class="circle text-center ft-alata">
-								<span>1</span>
+						<div class="row no-gutters">
+							<div class="col-12">
+								<h1 class="w ft-alata text-center title mb-4">Maak een evenement aan</h1>
 							</div>
 						</div>
-						<div class="col align-self-center">
-							<h1 class="m-0">evenement aanmaken</h1>
-						</div>
-					</div>
 
-					<div class="row  list-item mb-5" [ngClass]="{active: _secondEventActive}">
-						<div class="col-auto">
-							<div class="circle text-center ft-alata">
-								<span>2</span>
-							</div>
-						</div>
-						<div class="col align-self-center">
-							<h1 class="m-0">tickets aanmaken</h1>
-						</div>
-					</div>
+						<!-- The first item in the list is always active -->
+						<div class="row no-gutters flex-grow-1">
+							<div class="col-12 align-self-center">
+								<div class="row list-item mb-4 active">
+									<div class="col-auto">
+										<div class="circle text-center ft-alata">
+											<span>1</span>
+										</div>
+									</div>
+									<div class="col align-self-center">
+										<h1 class="m-0">evenement aanmaken</h1>
+									</div>
+								</div>
 
-					<div class="row  list-item" [ngClass]="{active: _thirdEventActive}">
-						<div class="col-auto">
-							<div class="circle text-center ft-alata">
-								<span>3</span>
+								<div class="row  list-item mb-4" [ngClass]="{active: state==createTickets}">
+									<div class="col-auto">
+										<div class="circle text-center ft-alata">
+											<span>2</span>
+										</div>
+									</div>
+									<div class="col align-self-center">
+										<h1 class="m-0">tickets aanmaken</h1>
+									</div>
+								</div>
+
+								<div class="row  list-item mb-4" [ngClass]="{active: state==createPersonalDetails}">
+									<div class="col-auto">
+										<div class="circle text-center ft-alata">
+											<span>3</span>
+										</div>
+									</div>
+									<div class="col align-self-center">
+										<h1 class="m-0">jouw gegevens</h1>
+									</div>
+								</div>
+
+								<div class="row  list-item" [ngClass]="{active: state==overview}">
+									<div class="col-auto">
+										<div class="circle text-center ft-alata">
+											<span>4</span>
+										</div>
+									</div>
+									<div class="col align-self-center">
+										<h1 class="m-0">Overzicht</h1>
+									</div>
+								</div>
 							</div>
-						</div>
-						<div class="col align-self-center">
-							<h1 class="m-0">jouw gegevens</h1>
 						</div>
 					</div>
 
@@ -54,7 +75,10 @@
 
 		<!-- Right panel -->
 		<div class="col-7">
-			<app-event-details></app-event-details>
+			<app-event-details *ngIf="state == createEvent"></app-event-details>
+			<!-- <app-ticket-details *ngIf="state == createTickets"></app-ticket-details>
+			<app-personal-details *ngIf="state == createPersonalDetails"></app-personal-details>
+			<app-overview *ngIf="state == overview"></app-overview> -->
 		</div>
 		<!-- End right panel -->
 
