--- a/tickevents-placeholder/src/app/create-event/event-details/event-name/event-name.component.html
+++ b/tickevents-placeholder/src/app/create-event/event-details/event-name/event-name.component.html
@@ -1,13 +1,26 @@
-<div class="row no-gutters h-100">
-    <div class="col-2 align-self-center text-center">
-        <!-- Nothing, there is nothing to return to -->
+<div class="d-flex flex-column h-100">
+    <div class="row no-gutters">
+        <div class="col-12">
+            <h1 class="text-center subtitle">Geef je evenement een pakkende naam</h1>
+        </div>
     </div>
-    
-    <div class="col-8">
-        <h1 class="text-center subtitle">Geef je evenement een pakkende naam</h1>
-    </div>
-    
-    <div class="col-2 align-self-center text-center">
-        <app-next-button (click)="clickNext()"></app-next-button>
+
+    <div class="row no-gutters flex-grow-1 align-content-center content-compensation">
+        <div class="col-2 text-center">
+            <!-- Nothing, there is nothing to return to -->
+        </div>
+
+        <div class="col-8">
+            <form [formGroup]="createEventForm" class="create-event-form">
+                <div class="form-row">
+                        <label for="eventName">Naam evenement</label>
+                        <input type="text" formControlName="eventName" id="eventName">
+                </div>
+            </form>
+        </div>
+
+        <div class="col-2 text-center my-auto">
+            <app-next-button (click)="clickNext()"></app-next-button>
+        </div>
     </div>
 </div>
