Added first version of Progress Tracker

--- a/tickevents-placeholder/src/app/create-event/event-details/event-details.component.html
+++ b/tickevents-placeholder/src/app/create-event/event-details/event-details.component.html
@@ -22,6 +22,8 @@
                 </div>
             </div>
 
+            <app-progress-tracker></app-progress-tracker>
+
         </div>
     </div>
     <!-- End content -->
