--- a/tickevents-placeholder/src/app/create-event/event-details/event-location/event-location.component.html
+++ b/tickevents-placeholder/src/app/create-event/event-details/event-location/event-location.component.html
@@ -17,7 +17,7 @@
                         <input type="text" formControlName="eventName" id="eventName">
                 </div>
             </form> -->
-            <h1 class="text-center">Location</h1>
+            <h1 class="text-center">Event Location</h1>
         </div>
 
         <div class="col-2 text-center my-auto">
