--- a/tickevents-placeholder/src/app/create-event/personal-details/personal-details.component.html
+++ b/tickevents-placeholder/src/app/create-event/personal-details/personal-details.component.html
@@ -1,1 +1,28 @@
-<p>personal-details works!</p>
+<div class="row no-gutters h-100">
+
+    <!-- Content -->
+    <div class="col-12">
+
+        <!-- this div is used to make the second row take the remaining height -->
+        <div class="d-flex flex-column h-100"> 
+
+            <div class="row no-gutters">
+                <div class="col-12">
+                    <h1 class="text-center title ft-alata">Gegevens van je evenement</h1>
+                </div>
+            </div>
+            
+            <!-- Flex-grow-1 takes the remaining available height -->
+            <div class="row no-gutters flex-grow-1">
+                <div class="col-12">
+                    <router-outlet></router-outlet>
+                </div>
+            </div>
+
+            <app-progress-tracker></app-progress-tracker>
+
+        </div>
+    </div>
+    <!-- End content -->
+
+</div>
