--- a/tickevents-placeholder/src/app/create-event/ticket-details/ticket-amount/ticket-amount.component.html
+++ b/tickevents-placeholder/src/app/create-event/ticket-details/ticket-amount/ticket-amount.component.html
@@ -17,7 +17,7 @@
                         <input type="text" formControlName="eventName" id="eventName">
                 </div>
             </form> -->
-            <h1 class="text-center">Event Date</h1>
+            <h1 class="text-center">Ticket amount</h1>
         </div>
 
         <div class="col-2 text-center my-auto">
