--- a/tickevents-placeholder/src/app/create-event/shared/stylesheets/create-event.css
+++ b/tickevents-placeholder/src/app/create-event/shared/stylesheets/create-event.css
@@ -3,8 +3,9 @@
     margin-right: 1em;
 }
 
-.content-compensation {
-    margin-top: -100px;
+
+*:focus {
+    outline: none
 }
 
 input {
@@ -28,4 +29,22 @@ label {
     margin-left: 25px;
     margin-bottom: 0;
     font-size: 36px;
+}
+
+.title {
+    font-size: 54px;
+    margin-top: 100px;
+}
+
+.subtitle {
+    color: #9A9A9A;
+    font-size: 36px;
+    margin-top: 14px;
+}
+
+.form-error {
+    color: red;
+    font-size: 1.1em;
+    margin-left: 25px;
+    margin-top: 10px;
 }
